Menus and dialogs updated on all pages

--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -104,14 +104,7 @@
 				<li><a href="nyheter/"><p>Publicerat & Press</p></a></li>
 				<br>
 				<br>
-				<h2 class="bold small text-blueGrey">Dokument</h2>
-				<li><a href="#"><p class="small bold">Besiktningsboken</p></a></li>
-				<br>
-				<br>
-				<li><a href="#"><p class="small bold">Lagbok 1</p></a></li>
-				<br>
-				<br>
-				<li><a href="#"><p class="small bold">Lagbok 2</p></a></li>
+				<li><div class="dialogTrigger" data-dialog-id="image"><p class="bold small">Dokument</p></div></li>
 			</ul>
 
 		</div>
@@ -173,8 +166,10 @@
 	<section class="slide whiteSlide autoHeight" id="entreprenad-services">
 		<div class="container">
 			<div class="wrap spaces">
-						<div class="fix-10-12 left">
+						<div class="fix-10-12 left margin-bottom-2">
+							<h1>Entreprenadbesiktning</h1>
 							<p>
+								Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av tjänster för entreprenadbesiktning för nyproduktion och ROT samt KA.
 								Vi har en digitaliserad process med besiktningsverktyget iSpect som kan omfatta hela byggprocessen eller enstaka tjänster. Vi erbjuder även kompletta besiktningsgrupper.
 							</p>
 						</div>
