--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -126,8 +126,8 @@
 			<div class="left">
 				<ul class="menu crop small bold">
 					<li><div class="dialogTrigger" data-dialog-id="image">Dokument</div></li>
-					<li><a href="nyheter/">Publicerat & Press</a></li>
-					<li><a href="om_oss/">Om oss</a></li>
+					<li><a href="../../nyheter/">Publicerat & Press</a></li>
+					<li><a href="../../om_oss/">Om oss</a></li>
 				</ul>
 			</div>
 			<div class="center">
@@ -136,8 +136,8 @@
 			<div class="right">
 				<ul class="menu crop small bold">
 					<li tabindex="1" class="dropdownTrigger" data-dropdown-hover="true" data-dropdown-id="dropdown-menu-services">Vårt erbjudande</li>
-					<li><a href="karriar/">Karriär</a></li>
-					<li><a href="kontakt/" class="text-blue">Kundkontakt</a></li>
+					<li><a href="../../karriar/">Karriär</a></li>
+					<li><a href="../../kontakt/" class="text-blue">Kundkontakt</a></li>
 				</ul>
 			</div>
 		</div>
@@ -156,61 +156,22 @@
 			<a href="/" class="logo"><img src="../../assets/svg/bm_logo.svg" alt=""></a>
 			<ul class="mainMenu text-blue">
 				<h2 class="bold small text-blueGrey">Navigation</h2>
-				<li>
-					<a href="#erbjudande">
-						<p>Vårt erbjudande</p>
-					</a>
-				</li>
+				<li><a href="../../#erbjudande"><p>Vårt erbjudande</p></a></li>
 				<br>
 				<br>
-				<li>
-					<a href="kontakt/">
-						<p>Kundkontakt</p>
-					</a>
-				</li>
+				<li><a href="../../kontakt/"><p>Kundkontakt</p></a></li>
 				<br>
 				<br>
-				<li>
-					<a href="karriar/">
-						<p>Karriär</p>
-					</a>
-				</li>
+				<li><a href="../../karriar/"><p>Karriär</p></a></li>
 				<br>
 				<br>
-				<li>
-					<a href="om_oss/">
-						<p>Om oss</p>
-					</a>
-				</li>
+				<li><a href="../../om_oss/"><p>Om oss</p></a></li>
 				<br>
 				<br>
-				<li>
-					<a href="nyheter/">
-						<p>Publicerat & Press</p>
-					</a>
-				</li>
+				<li><a href="../../nyheter/"><p>Publicerat & Press</p></a></li>
 				<br>
 				<br>
-				<h2 class="bold small text-blueGrey">Dokument</h2>
-				<li>
-					<a href="#">
-						<p class="small bold">Besiktningsboken</p>
-					</a>
-				</li>
-				<br>
-				<br>
-				<li>
-					<a href="#">
-						<p class="small bold">Lagbok 1</p>
-					</a>
-				</li>
-				<br>
-				<br>
-				<li>
-					<a href="#">
-						<p class="small bold">Lagbok 2</p>
-					</a>
-				</li>
+				<li><div class="dialogTrigger" data-dialog-id="image"><p class="bold small">Dokument</p></div></li>
 			</ul>
 
 		</div>
