--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 			</div>
 			<div class="right">
 				<ul class="menu crop small bold">
-					<li><a href="#erbjudande">Vårt erbjudande</a></li>
+					<li tabindex="1" class="dropdownTrigger" data-dropdown-hover="true" data-dropdown-id="dropdown-menu-services">Vårt erbjudande</li>
 					<li><a href="karriar/">Karriär</a></li>
 					<li><a href="kontakt/" class="text-blue">Kundkontakt</a></li>
 				</ul>
@@ -208,7 +208,35 @@
 
 		</div>
 	</nav>
-
+<!-- Menu dropdown -->
+<div class="dropdown top left center customDropdown" data-dropdown-id="dropdown-menu-services">
+  <ul>
+	  <li>
+			<a href="#entreprenad">
+				<div class="">
+					<img src="assets/svg/entreprenad.svg" alt=""  class="illustration-icon">
+					<p>Entreprenad</p>
+				</div>
+			</a>
+		</li>
+	  <li>
+			<a href="#brf">
+				<div class="">
+					<img src="assets/svg/brf.svg" alt=""  class="illustration-icon">
+					<p>Bostadsrättsförening</p>
+				</div>
+			</a>
+		</li>
+	  <li>
+			<a href="#privat">
+				<div class="">
+					<img src="assets/svg/house.svg" alt=""  class="illustration-icon">
+					<p>Privat</p>
+				</div>
+			</a>
+		</li>
+  </ul>
+</div>
 	<!-- HEADER -->
 	<section class="slide fade autoHeight" data-name="home" id="">
 		<div class="content">
