--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -86,7 +86,7 @@
 			<!-- right menu nav -->
 			<div class="right">
 				<ul class="menu crop small bold">
-					<li><a href="../#erbjudande">Vårt erbjudande</a></li>
+					<li tabindex="1" class="dropdownTrigger" data-dropdown-hover="true" data-dropdown-id="dropdown-menu-services">Vårt erbjudande</li>
 					<li><a href="../karriar/">Karriär</a></li>
 					<li><a href="../kontakt/" class="text-blue">Kundkontakt</a></li>
 				</ul>
@@ -127,9 +127,37 @@
 
 		</div>
 	</nav>
+<!-- Menu dropdown -->
+<div class="dropdown top left center customDropdown" data-dropdown-id="dropdown-menu-services">
+  <ul>
+	  <li>
+			<a href="../#entreprenad">
+				<div class="">
+					<img src="../assets/svg/entreprenad.svg" alt=""  class="illustration-icon">
+					<p>Entreprenad</p>
+				</div>
+			</a>
+		</li>
+	  <li>
+			<a href="../#brf">
+				<div class="">
+					<img src="../assets/svg/brf.svg" alt=""  class="illustration-icon">
+					<p>Bostadsrättsförening</p>
+				</div>
+			</a>
+		</li>
+	  <li>
+			<a href="../#privat">
+				<div class="">
+					<img src="../assets/svg/house.svg" alt=""  class="illustration-icon">
+					<p>Privat</p>
+				</div>
+			</a>
+		</li>
+  </ul>
+</div>
 
-
-	<!-- Slide 1 (#19) -->
+	<!-- HEADER -->
 	<section class="slide fade kenBurns" id="">
 		<div class="content">
 			<div class="container" style="height: 560px;padding-top: 5%;">
@@ -431,7 +459,7 @@
 
 	</div>
 </div>
-	
+
  <!-- DIALOG WITH LINKS TO LAW TEXTS -->
 	<div class="dialog hidden" data-dialog-id="image">
 		<div class="close white" data-dialog-action="close"></div>
