switched back to regular header Services link, the drop down was way to buggy

--- a/karriar/index.html
+++ b/karriar/index.html
@@ -83,7 +83,7 @@
 			</div>
 			<div class="right">
 				<ul class="menu crop small bold">
-					<li tabindex="1" class="dropdownTrigger" data-dropdown-hover="true" data-dropdown-id="dropdown-menu-services">Vårt erbjudande</li>
+					<li><a href="../#erbjudande">Vårt erbjudande</a></li>
 					<li><a href="../karriar/">Karriär</a></li>
 					<li><a href="../kontakt/" class="text-blue">Kundkontakt</a></li>
 				</ul>
@@ -124,35 +124,6 @@
 
 		</div>
 	</nav>
-<!-- Menu dropdown -->
-<div class="dropdown top left center customDropdown" data-dropdown-id="dropdown-menu-services">
-  <ul>
-	  <li>
-			<a href="../#entreprenad">
-				<div class="">
-					<img src="../assets/svg/entreprenad.svg" alt=""  class="illustration-icon">
-					<p>Entreprenad</p>
-				</div>
-			</a>
-		</li>
-	  <li>
-			<a href="../#brf">
-				<div class="">
-					<img src="../assets/svg/brf.svg" alt=""  class="illustration-icon">
-					<p>Bostadsrättsförening</p>
-				</div>
-			</a>
-		</li>
-	  <li>
-			<a href="../#privat">
-				<div class="">
-					<img src="../assets/svg/house.svg" alt=""  class="illustration-icon">
-					<p>Privat</p>
-				</div>
-			</a>
-		</li>
-  </ul>
-</div>
 
 	<!-- HEADER -->
 	<section class="slide fade contact" id="">
