--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -68,7 +68,7 @@
 			</div>
 			<div class="right">
 				<ul class="menu crop small bold">
-					<li tabindex="1" class="dropdownTrigger" data-dropdown-hover="true" data-dropdown-id="dropdown-menu-services">Vårt erbjudande</li>
+					<li><a href="../../#erbjudande">Vårt erbjudande</a></li>
 					<li><a href="../../karriar/">Karriär</a></li>
 					<li><a href="../../kontakt/" class="text-blue">Kundkontakt</a></li>
 				</ul>
