--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -59,8 +59,8 @@
 			<div class="left">
 				<ul class="menu crop small bold">
 					<li><div class="dialogTrigger" data-dialog-id="image">Dokument</div></li>
-					<li><a href="nyheter/">Publicerat & Press</a></li>
-					<li><a href="om_oss/">Om oss</a></li>
+					<li><a href="../../nyheter/">Publicerat & Press</a></li>
+					<li><a href="../../om_oss/">Om oss</a></li>
 				</ul>
 			</div>
 			<div class="center">
@@ -68,9 +68,9 @@
 			</div>
 			<div class="right">
 				<ul class="menu crop small bold">
-					<li tabindex="1" class="dropdownTrigger" data-dropdown-hover="true" data-dropdown-id="dropdown-menu-services">Vårt erbjudande</li>
-					<li><a href="karriar/">Karriär</a></li>
-					<li><a href="kontakt/" class="text-blue">Kundkontakt</a></li>
+					<li><a href="../../#erbjudande">Vårt erbjudande</a></li>
+					<li><a href="../../karriar/">Karriär</a></li>
+					<li><a href="../../kontakt/" class="text-blue">Kundkontakt</a></li>
 				</ul>
 			</div>
 		</div>
@@ -89,19 +89,19 @@
 			<a href="/" class="logo"><img src="../../assets/svg/bm_logo.svg" alt=""></a>
 			<ul class="mainMenu text-blue">
 				<h2 class="bold small text-blueGrey">Navigation</h2>
-				<li><a href="#erbjudande"><p>Vårt erbjudande</p></a></li>
+				<li><a href="../../#erbjudande"><p>Vårt erbjudande</p></a></li>
 				<br>
 				<br>
-				<li><a href="kontakt/"><p>Kundkontakt</p></a></li>
+				<li><a href="../../kontakt/"><p>Kundkontakt</p></a></li>
 				<br>
 				<br>
-				<li><a href="karriar/"><p>Karriär</p></a></li>
+				<li><a href="../../karriar/"><p>Karriär</p></a></li>
 				<br>
 				<br>
-				<li><a href="om_oss/"><p>Om oss</p></a></li>
+				<li><a href="../../om_oss/"><p>Om oss</p></a></li>
 				<br>
 				<br>
-				<li><a href="nyheter/"><p>Publicerat & Press</p></a></li>
+				<li><a href="../../nyheter/"><p>Publicerat & Press</p></a></li>
 				<br>
 				<br>
 				<li><div class="dialogTrigger" data-dialog-id="image"><p class="bold small">Dokument</p></div></li>
