Photos for the different services have been updated with higher quality photographs from Unsplash

--- a/index.html
+++ b/index.html
@@ -262,28 +262,28 @@
 												<h3>IKANO</h3>
 												<p>BRF Skogsstjärnan</p>
 												<div class="img-fade img-border-radius"></div>
-												<img src="assets/img/projects/brf_skogsstjernan.jpg" class="wide soft-shadow img-border-radius" alt="Projektfoto av BRF Skogsstjärnan"/>
+												<img src="assets/img/projects/brf_skogsstjernan.jpg" class="soft-shadow img-border-radius" alt="Projektfoto av BRF Skogsstjärnan"/>
 											</li>
 											<li>
 												<h3>SKANSKA</h3>
 												<p>BRF The View</p>
 												<div class="img-fade img-border-radius"></div>
-												<img src="assets/img/projects/brf_theview.jpg" class="wide soft-shadow img-border-radius" alt="Projektfoto av BRF The View"/>
+												<img src="assets/img/projects/brf_theview.jpg" class="soft-shadow img-border-radius" alt="Projektfoto av BRF The View"/>
 											</li>
 											<li>
 												<h3>EINAR MATSSON</h3>
 												<p>BRF Haganova</p>
 												<div class="img-fade img-border-radius"></div>
-												<img src="assets/img/projects/brf_haganova.jpg" class="wide soft-shadow img-border-radius" alt="Projektfoto av BRF Haganova"/>
+												<img src="assets/img/projects/brf_haganova.jpg" class="soft-shadow img-border-radius" alt="Projektfoto av BRF Haganova"/>
 											</li>
 											<li>
 												<h3>BYGGVESTA</h3>
 												<p>BRF Terrassen</p>
 												<div class="img-fade img-border-radius"></div>
-												<img src="assets/img/projects/brf_terrassen.jpg" class="wide soft-shadow img-border-radius" alt="Projektfoto av BRF Terrassen"/>
+												<img src="assets/img/projects/brf_terrassen.jpg" class="soft-shadow img-border-radius" alt="Projektfoto av BRF Terrassen"/>
 											</li>
 										</ul>
-										<ul class="controller center dots ae-3 fromBottom margin-bottom-2" data-slider-id="83">
+										<ul class="controller center dots fromBottom margin-bottom-2" data-slider-id="83">
 											<li class="dot selected"></li>
 											<li class="dot"></li>
 											<li class="dot"></li>
@@ -318,7 +318,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(assets/img/backgrounds/skeppsbron_1901.jpg)" alt="Bakgrundsbild av Skeppsbron, år 1901."></div>
+		<div class="background" style="background-image:url(assets/img/backgrounds/tripplehouses.jpg)" alt="Bakgrundsbild av tre hus i Hallstatt, Österrike. Foto av Daniel Frank på Unsplash"></div>
 	</section>
 
 	<!-- ENTERPRISE -->
@@ -340,12 +340,13 @@
 								<p>
 									Det ger bland annat möjlighet till noll byggfel vid slutbesiktning.
 								</p>
-								<a href="/tjanster/entreprenad/#entreprenad-services">
-									<p class="text-blue bold small margin-bottom-1">Våra tjänster för entreprenadbesiktning<i class="icono-arrow2-left"></i></p>
+								<a href="/tjanster/entreprenad/">
+									<p class="common-Link">Läs mer om våra tjänster för entreprenadbesiktning<i class="icono-arrow2-left"></i></p>
 								</a>
-								<a href="/tjanster/entreprenad/#entreprenad-offer">
+								<!-- <a href="/tjanster/entreprenad/#entreprenad-offer">
 									<p class="text-blue bold small">Mer om digitaliserad entreprenadbesiktning<i class="icono-arrow2-left"></i></p>
-								</a>
+								</a> -->
+								<br>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
 										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
@@ -379,7 +380,7 @@
 								</ul>
 							</li>
 							<li class="col-6-12 left fromRight">
-								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" width="1000" src="assets/img/backgrounds/goldengate.jpg" alt="Foto av byggare på Golden Gate Bridge" />
+								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" width="1000" src="assets/img/backgrounds/tunnel.jpg" alt="Foto av besiktningsman vid inspektion av tunnelbanesystem." />
 							</li>
 						</ul>
 					</div>
@@ -398,19 +399,20 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse flex-phone">
 							<li class="col-6-12 left fromLeft">
-								<img class="macbook-61 margin-bottom-3 soft-shadow img-border-radius" width="1000" src="assets/img/backgrounds/brf.jpg" alt="Foto av BRF i Belfast" />
+								<img class="macbook-61 margin-bottom-3 soft-shadow img-border-radius" width="1000" src="assets/img/backgrounds/apartments.jpg" alt="Foto av BRF i Downtown, Raleigh, North Carolina." />
 							</li>
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Besiktningstjänster för bostadsrättsföreningar</h1>
 								<p>
 									Besiktningsman.se erbjuder tjänster och besiktningsmän för samtliga fack för besiktning av nyproduktion och ROT-arbeten, samt KA-ansvariga, för bostadrättsfastigheter.
 								</p>
-								<a href="/tjanster/brf/#brf-offer">
+								<!-- <a href="/tjanster/brf/#brf-offer">
 									<p class="common-Link">Mer om vårt erbjudande<i class="icono-arrow2-left"></i></p>
+								</a> -->
+								<a href="/tjanster/brf/">
+									<p class="common-Link">Läs mer om våra tjänster för bostadsrättsföreningar<i class="icono-arrow2-left"></i></p>
 								</a>
-								<a href="/tjanster/brf/#brf-services">
-									<p class="common-Link margin-bottom-1">Våra tjänster för bostadsrättsföreningar<i class="icono-arrow2-left"></i></p>
-								</a>
+								<br>
 								<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
 								<script>
 									(function() {
@@ -461,12 +463,13 @@
 								<h1 class="">Besiktningstjänster för privatpersoner</h1>
 								<h3>Småhus, lägenheter, fritidshus</h3>
 								<p>Besiktningsman.se erbjuder tjänster och besiktningsmän för samtliga fack för besiktning av småhus, fritidshus och lägenheter, samt KA-ansvariga.</p>
-								<a href="/tjanster/privat/#privat-offer">
+								<!-- <a href="/tjanster/privat/#privat-offer">
 									<p class="common-Link">Mer om besiktning för småhus mm<i class="icono-arrow2-left"></i></p>
+								</a> -->
+								<a href="/tjanster/privat/">
+									<p class="common-Link">Läs mer om våra tjänster för privatpersoner<i class="icono-arrow2-left"></i></p>
 								</a>
-								<a href="/tjanster/privat/#privat-services">
-									<p class="common-Link margin-bottom-1">Våra tjänster för privatpersoner<i class="icono-arrow2-left"></i></p>
-								</a>
+								<br>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
 										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
@@ -500,7 +503,7 @@
 								</ul>
 							</li>
 							<li class="col-6-12 left fromRight">
-								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" width="900" src="assets/img/backgrounds/village_houses.jpg" alt="Fritidshus på svenska västkusten" />
+								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" width="900" src="assets/img/backgrounds/village_houses.jpg" alt="Fritidshus på svenska västkusten." />
 							</li>
 						</ul>
 					</div>
@@ -686,12 +689,12 @@
 	</div>
 
 	<!-- bm projects details Popup Text -->
-	<div class="popup white" data-popup-id="ispect-projects" id="ispect-projects">
+	<div class="popup white" data-popup-id="ispect-projects" id="ispect-projects" style="background: hsla(0,0%,100%,.8) !important;">
 		<div class="close button closeButton blue text-white soft-shadow bold">TILLBAKA</div>
 		<div class="content popupContent">
 			<div class="wrap spaces">
 				<!-- contents -->
-				<section class="slide white">
+				<section class="slide white" style="background: hsla(0,0%,100%,.0) !important;">
 					<div class="content">
 						<div class="container">
 							<div class="container-lg">
