--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -176,37 +176,6 @@
 
 		</div>
 	</nav>
-
-
-	<!-- Menu dropdown -->
-	<div class="dropdown top left center customDropdown" data-dropdown-id="dropdown-menu-services">
-		<ul>
-			<li>
-				<a href="../../#entreprenad">
-					<div class="">
-						<img src="../../assets/svg/entreprenad.svg" alt="" class="illustration-icon">
-						<p>Entreprenad</p>
-					</div>
-				</a>
-			</li>
-			<li>
-				<a href="../../#brf">
-					<div class="">
-						<img src="../../assets/svg/brf.svg" alt="" class="illustration-icon">
-						<p>Bostadsrättsförening</p>
-					</div>
-				</a>
-			</li>
-			<li>
-				<a href="../../#privat">
-					<div class="">
-						<img src="../../assets/svg/house.svg" alt="" class="illustration-icon">
-						<p>Privat</p>
-					</div>
-				</a>
-			</li>
-		</ul>
-	</div>
 	<!-- HEADER -->
 	<section class="slide fade autoHeight" data-name="home" id="">
 		<div class="content">
@@ -223,7 +192,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(../../assets/img/backgrounds/goldengate.jpg)" alt="Foto av Golden Gate under sin konstruktion"></div>
+		<div class="background" style="background-image:url(../../assets/img/backgrounds/village_houses.jpg)" alt="Fritidshus på svenska västkusten"></div>
 	</section>
 	<section class="slide whiteSlide autoHeight" id="privat-offer">
 		<div class="container-lg">
