project photo resolutions again

--- a/index.html
+++ b/index.html
@@ -261,25 +261,25 @@
 											<li class="selected">
 												<h3>IKANO</h3>
 												<p>BRF Skogsstjärnan</p>
-												<div class="img-fade img-border-radius"></div>
+												<div class="img-fade img-border-radius wide"></div>
 												<img src="assets/img/projects/brf_skogsstjernan.jpg" class="soft-shadow img-border-radius" alt="Projektfoto av BRF Skogsstjärnan"/>
 											</li>
 											<li>
 												<h3>SKANSKA</h3>
 												<p>BRF The View</p>
-												<div class="img-fade img-border-radius"></div>
+												<div class="img-fade img-border-radius wide"></div>
 												<img src="assets/img/projects/brf_theview.jpg" class="soft-shadow img-border-radius" alt="Projektfoto av BRF The View"/>
 											</li>
 											<li>
 												<h3>EINAR MATSSON</h3>
 												<p>BRF Haganova</p>
-												<div class="img-fade img-border-radius"></div>
+												<div class="img-fade img-border-radius wide"></div>
 												<img src="assets/img/projects/brf_haganova.jpg" class="soft-shadow img-border-radius" alt="Projektfoto av BRF Haganova"/>
 											</li>
 											<li>
 												<h3>BYGGVESTA</h3>
 												<p>BRF Terrassen</p>
-												<div class="img-fade img-border-radius"></div>
+												<div class="img-fade img-border-radius wide"></div>
 												<img src="assets/img/projects/brf_terrassen.jpg" class="soft-shadow img-border-radius" alt="Projektfoto av BRF Terrassen"/>
 											</li>
 										</ul>
