Removed a bunch of unnecessary classes n text

--- a/index.html
+++ b/index.html
@@ -704,8 +704,8 @@
 									<p>Här byggs framtiden med noll fel</p>
 								</div>
 									<div class="fix-12-12">
-										<ul class="grid later fixedSpaces equal left margin-top-5 items-container controller popupTrigger" data-popup-id="items-popup" data-slider-id="items-popup" >
-											<li class="col-4-12 ae-3 fromCenter">
+										<ul class="grid later fixedSpaces equal left margin-top-5 items-container">
+											<li class="col-4-12 fromCenter">
 												<div class="box-67">
 													<div class="thumbnail-67">
 														<img src="assets/img/projects/brf_linabergshojden.JPG" class="wide" alt="Projektvisualisering av Linabergshöjden"/>
@@ -718,7 +718,7 @@
 													</div>
 												</div>
 											</li>
-											<li class="col-4-12 ae-3 fromCenter">
+											<li class="col-4-12 fromCenter">
 												<div class="box-67">
 													<div class="thumbnail-67">
 														<img src="assets/img/projects/brf_sjonfjalletbalkonghusen.png" class="wide" alt="Projektvisualisering av Kvarter Sonfjällets Balkonghus"/>
@@ -731,7 +731,7 @@
 													</div>
 												</div>
 											</li>
-											<li class="col-4-12 ae-3 fromCenter">
+											<li class="col-4-12 fromCenter">
 												<div class="box-67">
 													<div class="thumbnail-67">
 														<img src="assets/img/projects/brf_lamellen.jpg" class="wide" alt="Projektvisualisering av BRF Lamellen"/>
@@ -744,7 +744,7 @@
 													</div>
 												</div>
 											</li>
-											<li class="col-4-12 ae-3 fromCenter">
+											<li class="col-4-12 fromCenter">
 												<div class="box-67">
 													<div class="thumbnail-67">
 														<img src="assets/img/projects/brf_pyrolan.jpg" class="wide" alt="Projektvisualisering av BRF Pyrolan"/>
@@ -757,7 +757,7 @@
 													</div>
 												</div>
 											</li>
-											<li class="col-4-12 ae-3 fromCenter">
+											<li class="col-4-12 fromCenter">
 												<div class="box-67">
 													<div class="thumbnail-67">
 														<img src="assets/img/projects/brf_pyrolan.jpg" class="wide" alt="Projektvisualisering av BRF The View"/>
@@ -770,7 +770,7 @@
 													</div>
 												</div>
 											</li>
-											<li class="col-4-12 ae-3 fromCenter">
+											<li class="col-4-12 fromCenter">
 												<div class="box-67">
 													<div class="thumbnail-67">
 														<img src="assets/img/projects/brf_ostrafrestaby.jpg" class="wide" alt="Projektvisualisering av BRF Östra Frestaby"/>
@@ -783,7 +783,7 @@
 													</div>
 												</div>
 											</li>
-											<li class="col-4-12 ae-3 fromCenter">
+											<li class="col-4-12 fromCenter">
 												<div class="box-67">
 													<div class="thumbnail-67">
 														<img src="assets/img/projects/brf_linabergsalle.jpg" class="wide" alt="Projektvisualisering av BRF Linabergs Allé"/>
@@ -796,7 +796,7 @@
 													</div>
 												</div>
 											</li>
-											<li class="col-4-12 ae-3 fromCenter">
+											<li class="col-4-12 fromCenter">
 												<div class="box-67">
 													<div class="thumbnail-67">
 														<img src="assets/img/projects/brf_soldathem.jpg" class="wide" alt="Projektvisualisering av BRF Soldathemmet"/>
@@ -809,7 +809,7 @@
 													</div>
 												</div>
 											</li>
-											<li class="col-4-12 ae-3 fromCenter">
+											<li class="col-4-12 fromCenter">
 												<div class="box-67">
 													<div class="thumbnail-67">
 														<img src="assets/img/projects/brf_leendet.jpg" class="wide" alt="Projektvisualisering av BRF Leendet"/>
@@ -822,7 +822,7 @@
 													</div>
 												</div>
 											</li>
-											<li class="col-4-12 ae-3 fromCenter">
+											<li class="col-4-12 fromCenter">
 												<div class="box-67">
 													<div class="thumbnail-67">
 														<img src="assets/img/projects/kv_pasen.jpg" class="wide" alt="Projektvisualisering av Kvarter Påsen 8 och 10"/>
@@ -835,7 +835,7 @@
 													</div>
 												</div>
 											</li>
-											<li class="col-4-12 ae-3 fromCenter">
+											<li class="col-4-12 fromCenter">
 												<div class="box-67">
 													<div class="thumbnail-67">
 														<img src="assets/img/projects/brf_bjork.jpg" class="wide" alt="Projektvisualisering av BRF Björk"/>
@@ -849,7 +849,7 @@
 												</div>
 											</li>
 
-											<li class="col-4-12 ae-3 fromCenter">
+											<li class="col-4-12 fromCenter">
 												<div class="box-67">
 													<div class="thumbnail-67">
 														<img src="assets/img/projects/brf_kanotbryggan.jpg" class="wide" alt="Projektvisualisering av BRF Kanot Bryggan"/>
@@ -1536,7 +1536,7 @@
 			</ul>
 		</div>
 		<div class="center-m-down">
-			<a data-dialog-action="close" class="bold small">Stäng ner mig</a>
+			<a data-dialog-action="close" class="bold small">Stäng</a>
 		</div>
 	</div>
 
