--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -455,7 +455,7 @@
 			</ul>
 		</div>
 		<div class="center-m-down">
-			<a data-dialog-action="close" class="bold small">Stäng ner mig</a>
+			<a data-dialog-action="close" class="bold small">Stäng</a>
 		</div>
 	</div>
 
