--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -142,7 +142,7 @@
 			</div>
 		</div>
 		</div>
-		<div class="background" style="background-image:url(../assets/img/backgrounds/crew.jpg)"></div>
+		<div class="background" style="background-image:url(../assets/img/backgrounds/bm_front.jpg)"></div>
 	</section>
 	<!-- Slide #24 -->
 	<section class="slide whiteSlide kenBurns">
@@ -458,7 +458,7 @@
 			</ul>
 		</div>
 		<div class="center-m-down">
-			<a data-dialog-action="close" class="bold small">Stäng ner mig</a>
+			<a data-dialog-action="close" class="bold small">Stäng</a>
 		</div>
 	</div>
 	<!-- Scripts -->
