Removed fade on headers, since the photos had it already

--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -111,7 +111,7 @@
 	</nav>
 
 <!-- HEADER -->
-<section class="slide fade autoHeight" data-name="home" id="">
+<section class="slide autoHeight" data-name="home" id="">
 	<div class="content">
 		<div class="container" style="height: 560px;">
 			<div class="wrap">
