--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -177,7 +177,7 @@
 		</div>
 	</nav>
 	<!-- HEADER -->
-	<section class="slide fade autoHeight" data-name="home" id="">
+	<section class="slide autoHeight" data-name="home" id="">
 		<div class="content">
 			<div class="container" style="height: 560px;">
 				<div class="wrap">
