experimenting a bit with the positioning of the panorama effect

--- a/index.html
+++ b/index.html
@@ -698,6 +698,9 @@
 					<p class="center">Här byggs framtiden med noll fel</p>
 					<div class="photobanner">
 						<img class="first" src="assets/img/projects/panorama_projects.jpg" alt="Panorama bild med utvalda projekt" />
+						<!-- duplicates to fake the panorama fx -->
+						<img src="assets/img/projects/panorama_projects.jpg" alt="Panorama bild med utvalda projekt" />
+						<img src="assets/img/projects/panorama_projects.jpg" alt="Panorama bild med utvalda projekt" />
 					</div>
 
 			</div>
