additional panorama divs

--- a/index.html
+++ b/index.html
@@ -701,6 +701,8 @@
 						<!-- duplicates to fake the panorama fx -->
 						<img src="assets/img/projects/panorama_projects.jpg" alt="Panorama bild med utvalda projekt" />
 						<img src="assets/img/projects/panorama_projects.jpg" alt="Panorama bild med utvalda projekt" />
+						<img src="assets/img/projects/panorama_projects.jpg" alt="Panorama bild med utvalda projekt" />
+						<img src="assets/img/projects/panorama_projects.jpg" alt="Panorama bild med utvalda projekt" />
 					</div>
 
 			</div>
