Updated the ispect details popovers

--- a/index.html
+++ b/index.html
@@ -616,11 +616,11 @@
 				<div class="content">
 					<div class="container">
 						<div class="container-lg">
-							<div class="fix-10-12 margin-top-1 center">
+							<div class="fix-10-12 margin-top-1 left">
 								<h1>Vårt helhetskoncept med Digitaliserad entreprenadbesiktning </h1>
 								<h3 class="margin-bottom-2">För ökad lönsamhet och leveranssäkerhet i byggprojekt.</h3>
-								<ul class="grid">
-									<li class="col-6-12">
+								<ul class="">
+									<li class="">
 										<h3>Skillnader</h3>
 										<p class="small">
 											Vid traditionell besiktning görs normalt bara för- och slutbesiktning, sedan sänds utlåtandet och felavhjälpning kan börja. Ofta sedan byggnaden tagits i bruk.
@@ -628,7 +628,7 @@
 											<br> Vår lösning med iSpect omfattar hela byggprocessen. Vi ser till att fel kan förebyggas och att uppkomna fel kan åtgärdas direkt.
 										</p>
 									</li>
-									<li class="col-6-12">
+									<li class="">
 										<h3>Fördelar</h3>
 										<p class="small">
 											• Inga dolda fel
@@ -640,7 +640,7 @@
 											<br> • Tillgång till ”Byggfelsbank” med tidigare erfarenheter och 300 000 byggfel
 										</p>
 									</li>
-									<li class="col-6-12">
+									<li class="">
 										<h3>Effekter</h3>
 										<p class="small">
 											Ökad lönsamhet i byggprojekt genom kraftigt reducerade kostader för felavhjälpning, från byggstart fram till att den 10-åriga garantiperioden passerats.
@@ -648,7 +648,7 @@
 											<br> Ökad leveranssäkerhet och kundnöjdhet genom ingen eller kraftigt minskad felavhjälpning efter överlämnandet
 										</p>
 									</li>
-									<li class="col-6-12">
+									<li class="">
 										<h3>iSpect</h3>
 										<p class="small">
 											I vårt helhetskoncept för digitaliserad entreprenadbesiktning använder vi besiktningsappen iSpect.
@@ -665,26 +665,28 @@
 					</div>
 				</div>
 			</section>
-			<section class="slide white">
+			<section class="slide whiteSlide kenBurns fromLeft autoHeight" data-name="privat" data-title="privat" id="privat">
 				<div class="content">
 					<div class="container">
-						<div class="container-lg">
-							<div class="fix-10-12 margin-top-1">
+						<div class="wrap">
+
+							<div class="fix-10-12">
 								<ul class="flex reverse">
 									<li class="col-6-12 left cell-32">
 										<h1>Med iSpect</h1>
 										<p>Kan besiktningsmannen under sitt arbete kontrollera, dokumentera, lagra och sända alla noteringar och projektdata direkt via sin läsplatta.</p>
 									</li>
-									<li class="col-6-12 left">
-										<img src="assets/img/ispect/ipad_front_sv.png" width="600" alt="iSpect skärmdump" />
+									<li class="col-6-12 left fromRight">
+										<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" width="900" src="assets/img/ispect/ispect_bm.jpg" alt="Fritidshus på svenska västkusten." />
 									</li>
 								</ul>
 							</div>
+
 						</div>
 					</div>
 				</div>
 			</section>
-
+			
 		</div>
 	</div>
 
