--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -350,87 +350,88 @@
     </div>
   </div>
 </section>
-<!-- ispect details Popup Text -->
-<div class="popup white" data-popup-id="ispect-details" id="ispect-details">
-	<div class="close button closeButton white text-blue left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
-	<div class="content popupContent">
+	<!-- ispect details Popup Text -->
+	<div class="popup white" data-popup-id="ispect-details" id="ispect-details">
+		<div class="close button closeButton blue text-white soft-shadow bold">TILLBAKA</div>
+		<div class="content popupContent">
 
-		<section class="slide white">
-			<div class="content">
-				<div class="container">
-					<div class="container-lg">
-						<h1 class="center fromCenter margin-top-1">Vårt helhetskoncept med Digitaliserad entreprenadbesiktning </h1>
-						<h2 class="center small">För ökad lönsamhet och leveranssäkerhet i byggprojekt.</h2>
-						<div class="margin-bottom-4 border-bottom-grey"></div>
-						<div class="fix-12-12">
-							<ul class="grid">
-								<li class="col-6-12 left">
-									<h3>Skillnader</h3>
-									<p class="small">
-										Vid traditionell besiktning görs normalt bara för- och slutbesiktning, sedan sänds utlåtandet och felavhjälpning kan börja. Ofta sedan byggnaden tagits i bruk.
-										<br>
-										<br> Vår lösning med iSpect omfattar hela byggprocessen. Vi ser till att fel kan förebyggas och att uppkomna fel kan åtgärdas direkt.
-									</p>
-								</li>
-								<li class="col-6-12 left ">
-									<h3>Fördelar</h3>
-									<p class="small">
-										• Inga dolda fel
-										<br> • Inga onödiga produktionsstopp
-										<br> • Ökad kvalitetssträvan främjas
-										<br> • Säker och lättillgänglig dokumentation
-										<br> • Ökad möjlighet till direkt erfarenhetsåterföring
-										<br> • Möjlighet till noll fel vid överlämnandet
-										<br> • Tillgång till ”Byggfelsbank” med tidigare erfarenheter och 300 000 byggfel
-									</p>
-								</li>
-								<li class="col-6-12 left">
-									<h3>Effekter</h3>
-									<p class="small">
-										Ökad lönsamhet i byggprojekt genom kraftigt reducerade kostader för felavhjälpning, från byggstart fram till att den 10-åriga garantiperioden passerats.
-										<br>
-										<br> Ökad leveranssäkerhet och kundnöjdhet genom ingen eller kraftigt minskad felavhjälpning efter överlämnandet
-									</p>
-								</li>
-								<li class="col-6-12 left">
-									<h3>iSpect</h3>
-									<p class="small">
-										I vårt helhetskoncept för digitaliserad entreprenadbesiktning använder vi besiktningsappen iSpect.
-										<br>
-										iSpect har utvecklats i nära samarbete med Besiktningsman.se.
-										<br>
-										Vår lösning med iSpect omfattar hela byggprocessen.
-									</p>
-								</li>
-							</ul>
+			<section class="slide white">
+				<div class="content">
+					<div class="container">
+						<div class="container-lg">
+							<div class="fix-10-12 margin-top-1 left">
+								<h1>Vårt helhetskoncept med Digitaliserad entreprenadbesiktning </h1>
+								<h3 class="margin-bottom-2">För ökad lönsamhet och leveranssäkerhet i byggprojekt.</h3>
+								<ul class="">
+									<li class="">
+										<h3>Skillnader</h3>
+										<p class="small">
+											Vid traditionell besiktning görs normalt bara för- och slutbesiktning, sedan sänds utlåtandet och felavhjälpning kan börja. Ofta sedan byggnaden tagits i bruk.
+											<br>
+											<br> Vår lösning med iSpect omfattar hela byggprocessen. Vi ser till att fel kan förebyggas och att uppkomna fel kan åtgärdas direkt.
+										</p>
+									</li>
+									<li class="">
+										<h3>Fördelar</h3>
+										<p class="small">
+											• Inga dolda fel
+											<br> • Inga onödiga produktionsstopp
+											<br> • Ökad kvalitetssträvan främjas
+											<br> • Säker och lättillgänglig dokumentation
+											<br> • Ökad möjlighet till direkt erfarenhetsåterföring
+											<br> • Möjlighet till noll fel vid överlämnandet
+											<br> • Tillgång till ”Byggfelsbank” med tidigare erfarenheter och 300 000 byggfel
+										</p>
+									</li>
+									<li class="">
+										<h3>Effekter</h3>
+										<p class="small">
+											Ökad lönsamhet i byggprojekt genom kraftigt reducerade kostader för felavhjälpning, från byggstart fram till att den 10-åriga garantiperioden passerats.
+											<br>
+											<br> Ökad leveranssäkerhet och kundnöjdhet genom ingen eller kraftigt minskad felavhjälpning efter överlämnandet
+										</p>
+									</li>
+									<li class="">
+										<h3>iSpect</h3>
+										<p class="small">
+											I vårt helhetskoncept för digitaliserad entreprenadbesiktning använder vi besiktningsappen iSpect.
+											<br>
+											iSpect har utvecklats i nära samarbete med Besiktningsman.se.
+											<br>
+											Vår lösning med iSpect omfattar hela byggprocessen.
+										</p>
+									</li>
+								</ul>
+							</div>
+
 						</div>
-
 					</div>
 				</div>
-			</div>
-		</section>
-		<section class="slide white">
-			<div class="content">
-				<div class="container">
-					<div class="container-lg">
+			</section>
+			<section class="slide whiteSlide kenBurns fromLeft autoHeight" data-name="privat" data-title="privat" id="privat">
+				<div class="content">
+					<div class="container">
+						<div class="wrap">
 
-						<ul class="flex reverse">
-							<li class="col-6-12 left cell-32">
-								<h1>Med iSpect</h1>
-								<p>Kan besiktningsmannen under sitt arbete kontrollera, dokumentera, lagra och sända alla noteringar och projektdata direkt via sin läsplatta.</p>
-							</li>
-							<li class="col-6-12 left">
-								<img class="" src="../assets/img/ispect/ipad_front_sv.png" width="600" alt="iSpect skärmdump" />
-							</li>
-						</ul>
+							<div class="fix-10-12">
+								<ul class="flex reverse">
+									<li class="col-6-12 left cell-32">
+										<h1>Med iSpect</h1>
+										<p>Kan besiktningsmannen under sitt arbete kontrollera, dokumentera, lagra och sända alla noteringar och projektdata direkt via sin läsplatta.</p>
+									</li>
+									<li class="col-6-12 left fromRight">
+										<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" width="900" src="../assets/img/ispect/ispect_bm.jpg" alt="Fritidshus på västkusten." />
+									</li>
+								</ul>
+							</div>
 
+						</div>
 					</div>
 				</div>
-			</div>
-		</section>
+			</section>
 
+		</div>
 	</div>
-</div>
 
  <!-- DIALOG WITH LINKS TO LAW TEXTS -->
 	<div class="dialog hidden" data-dialog-id="image">
